[gd_scene load_steps=7 format=3 uid="uid://dkda8ew3bjf6t"]

[ext_resource type="Script" path="res://scripts/Game.gd" id="1_5fi84"]
[ext_resource type="Script" path="res://scripts/Interface.gd" id="1_cruao"]
[ext_resource type="Theme" uid="uid://ewdgle4lp64y" path="res://theme.tres" id="3_7r7jh"]
[ext_resource type="Script" path="res://scripts/CellButton.gd" id="4_mjl6g"]
[ext_resource type="StyleBox" uid="uid://dl4fy0xvdiulu" path="res://StartButtonTheme.tres" id="5_q5sbn"]
[ext_resource type="StyleBox" uid="uid://dt3pe0s6r2oqm" path="res://StartButtonThemeHovered.tres" id="6_amjs0"]

[node name="Game" type="Node"]
script = ExtResource("1_5fi84")

[node name="Interface" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cruao")

[node name="Header" type="MarginContainer" parent="Interface"]
layout_mode = 2
offset_right = 500.0
offset_bottom = 24.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Interface/Header"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Interface/Header/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="XLabel" type="Label" parent="Interface/Header/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("3_7r7jh")
theme_override_colors/font_color = Color(1, 0.388235, 0.278431, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.478431)
text = "X"

[node name="YouLabel2" type="Label" parent="Interface/Header/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("3_7r7jh")
text = " Score:"

[node name="YouScore" type="Label" parent="Interface/Header/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
theme = ExtResource("3_7r7jh")
text = "0"

[node name="OLabel" type="Label" parent="Interface/Header/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("3_7r7jh")
theme_override_colors/font_color = Color(0.529412, 0.807843, 0.921569, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.454902)
text = "O"

[node name="FoeLabel2" type="Label" parent="Interface/Header/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("3_7r7jh")
text = " Score:"

[node name="FoeScore" type="Label" parent="Interface/Header/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("3_7r7jh")
text = "0"

[node name="StatusLabel" type="Label" parent="Interface/Header/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_7r7jh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Interface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Grid" type="GridContainer" parent="Interface/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3

[node name="Cell-0-0" type="Button" parent="Interface/CenterContainer/Grid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("3_7r7jh")
text = "?"
script = ExtResource("4_mjl6g")

[node name="Cell-1-0" type="Button" parent="Interface/CenterContainer/Grid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("3_7r7jh")
text = "?"
script = ExtResource("4_mjl6g")
x = 1

[node name="Cell-2-0" type="Button" parent="Interface/CenterContainer/Grid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("3_7r7jh")
text = "?"
script = ExtResource("4_mjl6g")
x = 2

[node name="Cell-0-1" type="Button" parent="Interface/CenterContainer/Grid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("3_7r7jh")
text = "?"
script = ExtResource("4_mjl6g")
y = 1

[node name="Cell-1-1" type="Button" parent="Interface/CenterContainer/Grid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("3_7r7jh")
text = "?"
script = ExtResource("4_mjl6g")
x = 1
y = 1

[node name="Cell-2-1" type="Button" parent="Interface/CenterContainer/Grid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("3_7r7jh")
text = "?"
script = ExtResource("4_mjl6g")
x = 2
y = 1

[node name="Cell-0-2" type="Button" parent="Interface/CenterContainer/Grid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("3_7r7jh")
text = "?"
script = ExtResource("4_mjl6g")
y = 2

[node name="Cell-1-2" type="Button" parent="Interface/CenterContainer/Grid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("3_7r7jh")
text = "?"
script = ExtResource("4_mjl6g")
x = 1
y = 2

[node name="Cell-2-2" type="Button" parent="Interface/CenterContainer/Grid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("3_7r7jh")
text = "?"
script = ExtResource("4_mjl6g")
x = 2
y = 2

[node name="NewGameButton" type="Button" parent="Interface"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 50.0
offset_top = 225.0
offset_right = 450.0
offset_bottom = 275.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_7r7jh")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = ExtResource("5_q5sbn")
theme_override_styles/hover = ExtResource("6_amjs0")
text = "Start New Game"

[node name="Difficulty" type="HBoxContainer" parent="Interface"]
custom_minimum_size = Vector2(0, 40.605)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -196.5
offset_top = -41.0
offset_right = 196.5
grow_horizontal = 2
grow_vertical = 0

[node name="DifficultyLabel" type="Label" parent="Interface/Difficulty"]
layout_mode = 2
theme = ExtResource("3_7r7jh")
theme_override_font_sizes/font_size = 16
text = "Computer AI (stupid/clever):"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DifficultySwitch" type="CheckButton" parent="Interface/Difficulty"]
layout_mode = 2
theme = ExtResource("3_7r7jh")

[connection signal="pressed" from="Interface/CenterContainer/Grid/Cell-0-0" to="Interface/CenterContainer/Grid/Cell-0-0" method="_on_pressed"]
[connection signal="pressed" from="Interface/CenterContainer/Grid/Cell-1-0" to="Interface/CenterContainer/Grid/Cell-1-0" method="_on_pressed"]
[connection signal="pressed" from="Interface/CenterContainer/Grid/Cell-2-0" to="Interface/CenterContainer/Grid/Cell-2-0" method="_on_pressed"]
[connection signal="pressed" from="Interface/CenterContainer/Grid/Cell-0-1" to="Interface/CenterContainer/Grid/Cell-0-1" method="_on_pressed"]
[connection signal="pressed" from="Interface/CenterContainer/Grid/Cell-1-1" to="Interface/CenterContainer/Grid/Cell-1-1" method="_on_pressed"]
[connection signal="pressed" from="Interface/CenterContainer/Grid/Cell-2-1" to="Interface/CenterContainer/Grid/Cell-2-1" method="_on_pressed"]
[connection signal="pressed" from="Interface/CenterContainer/Grid/Cell-0-2" to="Interface/CenterContainer/Grid/Cell-0-2" method="_on_pressed"]
[connection signal="pressed" from="Interface/CenterContainer/Grid/Cell-1-2" to="Interface/CenterContainer/Grid/Cell-1-2" method="_on_pressed"]
[connection signal="pressed" from="Interface/CenterContainer/Grid/Cell-2-2" to="Interface/CenterContainer/Grid/Cell-2-2" method="_on_pressed"]
[connection signal="pressed" from="Interface/NewGameButton" to="Interface" method="onNewGameButtonClick"]
[connection signal="toggled" from="Interface/Difficulty/DifficultySwitch" to="Interface" method="onDifficultyChange"]
